<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.mambobryan.corescore.StartActivity">


    <TextView
        android:textSize="48sp"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center"
        tools:text="@string/app_name"
        android:text="@string/app_name"/>

    <TextView
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/start_instructions"/>

    <LinearLayout
        android:id="@+id/selection_layout"
        android:background="@drawable/peach_bg"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:textColor="@color/black"
            android:text="@string/choice_message"
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" />

        <LinearLayout
            android:layout_margin="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:textColor="@color/black"
                android:text="@string/sport_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                tools:text="Basketball" />

            <Switch
                android:id="@+id/selection_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp" />

            <TextView
                android:textColor="@color/black"
                android:text="@string/sport_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                tools:text="Football" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        tools:text="Start"
        android:text="@string/start_button"/>

</LinearLayout>
